# Automotive-Digital-Twin

./: .gitignore  LICENSE  README.md
src/ackermann_msgs/: packageInfo.mat
src/ackermann_msgs/include/ackermann_msgs/: visibility_control.h
src/communication_fe/: package.xml  setup.cfg  setup.py
src/communication_fe/communication_fe/: ros_to_udp.py  udp_to_ros.py
src/communication_fe/config/: params.yaml
src/communication_fe/launch/: client_launch.py  server_launch.py  vehicle_communication_launch.py
src/controlling_fe/: CMakeLists.txt  package.xml  packageInfo.mat
src/controlling_fe/controlling_fe/: lv_determination.py
src/controlling_fe/include/controlling_fe/: fgc.h  fgc_private.h  fgc_types.h  ros2nodeinterface.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtmodel.h  rtwtypes.h  slros2_initialize.h  slros_busmsg_conversion.h  visibility_control.h
src/controlling_fe/src/: fgc.cpp  fgc_data.cpp  main.cpp  ros2nodeinterface.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  slros2_initialize.cpp  slros_busmsg_conversion.cpp
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: Bbox.msg  Bboxes.msg  Track.msg  Tracks.msg
src/data_collection_fe/: CMakeLists.txt  package.xml
src/data_collection_fe/data_collection_fe/: rosbag_manager.py
src/data_collection_fe/launch/: data_collection_launch.py
src/data_collection_fe/src/: rosbag_recorder.cpp
src/data_preprocessing_fe/: CMakeLists.txt  package.xml  packageInfo.mat
src/data_preprocessing_fe/include/data_preprocessing_fe/: data_preprocessing_fe.h  data_preprocessing_fe_private.h  data_preprocessing_fe_types.h  ros2nodeinterface.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtmodel.h  rtwtypes.h  slros2_initialize.h  slros_busmsg_conversion.h  visibility_control.h
src/data_preprocessing_fe/src/: data_preprocessing_fe.cpp  data_preprocessing_fe_data.cpp  main.cpp  ros2nodeinterface.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  slros2_initialize.cpp  slros_busmsg_conversion.cpp
src/launchers/: package.xml  setup.py
src/launchers/launch/: dt_entity_launch.py  pt_entity_launch.py  user_entity_launch.py
src/presentation_fe/: package.xml  setup.cfg  setup.py
src/presentation_fe/config/: params.yaml
src/presentation_fe/launch/: presentation_launch.py
src/presentation_fe/presentation_fe/: tracks_to_bboxes.py
src/reporting_fe/: package.xml  setup.cfg  setup.py
src/reporting_fe/config/: params.yaml
src/reporting_fe/launch/: reporting_launch.py
src/reporting_fe/reporting_fe/: reporting.py
src/reporting_fe/ros2bag_convert/: README_EN.md
src/reporting_fe/scripts/: bag2csv.sh
src/user_interface_fe/: package.xml  setup.cfg  setup.py
src/user_interface_fe/config/: params.yaml  user_interface.perspective
src/user_interface_fe/launch/: user_interface_launch.py
src/user_interface_fe/user_interface_fe/: cuboid_visualizer.py  user_interface.py
