<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>controlling_fe</name>
  <version>1.0.0</version>
  <description>Forward gap calculation for ACC.</description>
  <maintainer email="ramdhans@mcmaster.ca">Stefan</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>ackermann_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rclpy</depend>
  <depend>custom_interfaces</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
<!-- Generated on Sun Mar 30 15:55:18 2025 -->
