<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>data_preprocessing_fe</name>
  <version>1.0.0</version>
  <description>Clustering and tracking of 2D point cloud.</description>
  <maintainer email="ramdhans@mcmaster.ca">MacCity</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>custom_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
<!-- Generated on Fri Mar 21 16:08:58 2025 -->
